Fix backspace/delete on non-BMP characters for plaintext editor.  b=237585  r=smontagu  sr=roc